# Math

./: .clang-format  .clangd  .gitattributes  CLAUDE.md  CMakeLists.txt  Clang-CXX-CXXImportStd.cmake  Makefile
.github/workflows/: documentation.yaml  install.yml  macos.yml  macos_setup-cepp.yml  macos_setup-cpp.yml  style.yml  ubuntu.yml  windows.yml
benchmark/: CMakeLists.txt  Nanobench.cxxm  benchmark_main.cpp  dual_benchmark.cpp  dual_elt_benchmarks.cpp  expm.cxxm  expm_benchmark.cpp  expm_benchmark1.cpp  expm_benchmark1x2.cpp  expm_benchmark2.cpp  expm_benchmark2x2.cpp  expm_benchmark3.cpp  expm_benchmark3x2.cpp  expm_benchmark4.cpp  expm_benchmark4x2.cpp  expm_benchmark5.cpp  expm_benchmark5x2.cpp  expm_benchmark6.cpp  expm_benchmark6x2.cpp  expm_benchmark7.cpp  expm_benchmark7x2.cpp  expm_benchmark8.cpp  expm_benchmark8x2.cpp  gcd_benchmark.cpp  int_matmul_benchmark.cpp  integer_matrix_benchmarks.cpp  randdual.cxxm  simplex_benchmark.cpp  sort_benchmark.cpp  tensor_benchmark.cpp  zerocol_benchmark.cpp
benchmark/include/: expm.hpp  randdual.hpp
cmake/: CPM.cmake
data/: simplex_tableau_0.binmat  simplex_tableau_1.binmat
include/: Macros.hxx  Owner.hxx  jemalloc-new-delete.hxx
include/Alloc/: Arena.hpp  Mallocator.hpp
include/Bit/: Float.hpp
include/Containers/: BitSets.hpp  Pair.hpp  Storage.hpp  TinyVector.hpp  Tuple.hpp
include/Math/: Array.hpp  ArrayOps.hpp  AxisTypes.hpp  BoxOpt.hpp  BoxOptInt.hpp  Comparisons.hpp  Constraints.hpp  Constructors.hpp  Dual.hpp  ElementarySIMD.hpp  Exp.hpp  ExpDual.hpp  Factor.hpp  GreatestCommonDivisor.hpp  Indexing.hpp  Iterators.hpp  LinearAlgebra.hpp  Math.hpp  Matrix.hpp  MatrixDimensions.hpp  MultiplicativeInverse.hpp  NormalForm.hpp  Orthogonalize.hpp  Rational.hpp  SOA.hpp  Saturated.hpp  Simplex.hpp  SmallSparseMatrix.hpp  StaticArrays.hpp  UniformScaling.hpp  Unimodularization.hpp  VectorGreatestCommonDivisor.hpp
include/Numbers/: Int8.hpp
include/SIMD/: Indexing.hpp  Intrin.hpp  Masks.hpp  Unroll.hpp  UnrollIndex.hpp  Vec.hpp
include/Utilities/: Assign.hpp  Invariant.hpp  ListRanges.hpp  MatrixStringParse.hpp  Parameters.hpp  Reference.hpp  TypeCompression.hpp  TypePromotion.hpp  Valid.hpp  Widen.hpp
mod/: STL.cxx
mod/Alloc/: Arena.cxx  Arena.cxxm  Mallocator.cxx  Mallocator.cxxm
mod/Bit/: Float.cxx  Float.cxxm
mod/Containers/: BitSets.cxx  BitSets.cxxm  Buffer.cxxm  Flat.cxx  Flat.cxxm  Linear.cxx  Pair.cxx  Permutation.cxxm  Storage.cxx  Storage.cxxm  TinyVector.cxx  TinyVector.cxxm  Tuple.cxx  Tuple.cxxm  UnrolledList.cxx  UnrolledList.cxxm
mod/Math/: Array.cxx  Array.cxxm  ArrayConcepts.cxx  ArrayConcepts.cxxm  ArrayOps.cxx  ArrayOps.cxxm  AxisTypes.cxx  AxisTypes.cxxm  BoxOpt.cxx  BoxOpt.cxxm  BoxOptInt.cxx  BoxOptInt.cxxm  CheckSizes.cxx  CheckSizes.cxxm  Comparisons.cxx  Comparisons.cxxm  Constraints.cxx  Constraints.cxxm  Constructors.cxx  Constructors.cxxm  Dual.cxx  Dual.cxxm  ElementarySIMD.cxx  ElementarySIMD.cxxm  EmptyArrays.cxx  EmptyArrays.cxxm  ExpDual.cxx  ExpressionTemplateUtils.cxxm  ExpressionTemplates.cxx  ExpressionTemplates.cxxm  Factor.cxx  Factor.cxxm  GenericConstructors.cxx  GenericConstructors.cxxm  GreatestCommonDivisor.cxx  GreatestCommonDivisor.cxxm  Indexing.cxx  Indexing.cxxm  Iterators.cxx  LinearAlgebra.cxx  (+39 more)
mod/Numbers/: Int8.cxx  Int8.cxxm
mod/SIMD/: Indexing.cxx  Indexing.cxxm  Intrin.cxx  Intrin.cxxm  Masks.cxx  Masks.cxxm  SIMD.cxx  SIMD.cxxm  Transpose.cxx  Transpose.cxxm  Unroll.cxx  Unroll.cxxm  UnrollIndex.cxx  UnrollIndex.cxxm  Vec.cxx  Vec.cxxm
mod/Utilities/: ArrayPrint.cxx  ArrayPrint.cxxm  Assign.cxx  BaseUtils.cxxm  CorePrint.cxx  CorePrint.cxxm  Invariant.cxx  Invariant.cxxm  ListRanges.cxx  ListRanges.cxxm  MatrixBinaryIO.cxxm  MatrixStringParse.cxx  MatrixStringParse.cxxm  Optional.cxx  Optional.cxxm  Parameters.cxx  Parameters.cxxm  Reference.cxx  Reference.cxxm  Sort.cxx  Sort.cxxm  TypeCompression.cxx  TypeCompression.cxxm  TypePromotion.cxx  Valid.cxx  Valid.cxxm  Widen.cxx  Widen.cxxm
test/: CMakeLists.txt  Testing.cxx  Testing.cxxm  arena_allocate_at_least_test.cpp  bit.cpp  bitset_test.cpp  boxopt_test.cpp  buffer_test.cpp  compressview_test.cpp  conditional_test.cpp  dot_test.cpp  dual_test.cpp  expmat_test.cpp  find_if_test.cpp  linear_algebra_test.cpp  linear_diophantine_test.cpp  listrange_test.cpp  matrix_test.cpp  multiplicative_inverse.cpp  normal_form_test.cpp  number_tests.cpp  number_util_tests.cpp  optional_test.cpp  orthogonalize_test.cpp  permutation_test.cpp  saturated.cpp  select_test.cpp  simd_div_fma_test.cpp  simdgcd.cpp  simdtest.cpp  simplex_dynsolve_test.cpp  simplex_lexmin_test.cpp  simplex_test.cpp  soa_test.cpp  sort_test.cpp  staticarray_repelements_test.cpp  string_to_intmat_test.cpp  tuple_test.cpp  type_alias.cpp  ulist_test.cpp  (+2 more)
tools/: compile_commands.py  generate_binmat.py  prettyprinters.py
